--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "appointments_js",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "author": "Dragos",
   "private": true,
   "type": "module",
   "scripts": {
@@ -11,17 +12,29 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.1.1",
+    "@popperjs/core": "^2.11.8",
+    "@vueuse/components": "^10.7.2",
+    "@vueuse/core": "^10.7.2",
+    "dayjs": "^1.11.10",
+    "lodash": "^4.17.21",
     "pinia": "^2.1.7",
+    "v-calendar": "^3.1.2",
     "vue": "^3.3.11",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
     "@vitejs/plugin-vue": "^4.5.2",
     "@vue/eslint-config-prettier": "^8.0.0",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "postcss": "^8.4.33",
     "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "tailwindcss": "^3.4.1",
     "vite": "^5.0.10"
   }
 }
