--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@vueuse/components": "^10.7.2",
     "@vueuse/core": "^10.7.2",
     "dayjs": "^1.11.10",
+    "i": "^0.3.7",
     "lodash": "^4.17.21",
+    "npm": "^10.5.2",
     "pinia": "^2.1.7",
     "v-calendar": "^3.1.2",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
-    "vue-toastification": "^2.0.0-rc.5"
+    "vue-toastification": "^2.0.0-rc.5",
+    "vue3-events-calendar": "^1.0.22"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
